<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.tinquinstore</groupId>
        <artifactId>ZoooStore</artifactId>
        <version>${revision}</version>
    </parent>

    <groupId>com.tinquinstore.zooostore</groupId>
    <artifactId>core</artifactId>
    <version>${revision}</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.tinquinstore.zooostore</groupId>
            <artifactId>persistance</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>com.tinquinstore.zooostore</groupId>
            <artifactId>api</artifactId>
            <version>${revision}</version>

        </dependency>
    </dependencies>

</project>